src/objects/Apttus_Config2__UserView__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__FilterCriteria__c</fullName>
        <description>Cart views filter criteria specification</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Cart views filter criteria specification</inlineHelpText>
        <label>Filter Criteria</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Flow__c</fullName>
        <description>Captures the Flow ID for the view settings</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Captures the Flow ID for the view settings</inlineHelpText>
        <label>Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupBy__c</fullName>
        <description>Captures the GroupBy field for the view setting record</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Captures the GroupBy field for the view setting record</inlineHelpText>
        <label>GroupBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProfileId__c</fullName>
        <description>Used to store profileIds as comma separated values</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to store profileIds as comma separated values</inlineHelpText>
        <label>ProfileId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RoleId__c</fullName>
        <description>Stores userrole ID</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Stores userrole ID</inlineHelpText>
        <label>RoleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Source__c</fullName>
        <description>Indicates from which custom object the available columns come from.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicates from which custom object the available columns come from.</inlineHelpText>
        <label>SourceObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>Used to store the cart view type (Public/Private/Protected)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to store the cart view type (Public/Private/Protected)</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UserId__c</fullName>
        <description>Used to store users ID for the cart view as comma separator values.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to store users ID for the cart view as comma separator values.</inlineHelpText>
        <label>UserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>